data/derived/fa15/progs/unify/prog3949.ml.out
Characters 86-97:
  | h::t -> matchHeads (listList(explode w));;
                                ^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type 'a list list
       Type char is not compatible with type 'a list 
